kubernetes/complex-k8s/client-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: client
  name: client
spec:
  replicas: 3
  selector:
    matchLabels:
      run: client
  template:
    metadata:
      labels:
        run: client
    spec:
      containers:
        - name: client
          image: stephengrider/multi-client
          ports: 
            - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: client
  name: client
spec:
  ports:
    - name: port-1
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector: 
    run: client
