kubernetes/complex-k8s/server-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: server
  name: server
spec:
  replicas: 3
  selector:
    matchLabels:
      run: server
  template:
    metadata:
      labels:
        run: server
    spec:
      containers:
        - name: server
          image: stephengrider/multi-server
          ports: 
            - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: server
  name: server
  namespace: default
spec:
  ports:
    - name: port-1
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    run: server
